[gd_scene load_steps=11 format=3 uid="uid://b82kauwohbvun"]

[ext_resource type="Script" uid="uid://mmu44ppqby8v" path="res://scripts/GameManager.gd" id="1_5lrye"]
[ext_resource type="PackedScene" uid="uid://c0cerfjhi148m" path="res://scenes/entity_manager.tscn" id="3_iprcq"]
[ext_resource type="PackedScene" uid="uid://dswe4b60aebu5" path="res://scenes/ui/battle_entity_info.tscn" id="4_riktp"]
[ext_resource type="PackedScene" uid="uid://d4f0gy2sw12hv" path="res://scenes/ui/end_screen.tscn" id="9_s08fr"]

[sub_resource type="Animation" id="Animation_3mlxk"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/TurnLabel:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(5, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/TurnLabel:modulate:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/EndScreen:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(448, 14)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/EndScreen:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CanvasLayer/EndScreen:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_yj4cw"]
resource_name = "show_end_screen"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/EndScreen:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(600, 43), Vector2(600, 130)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/EndScreen:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/EndScreen:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_puse5"]
resource_name = "start_player_turn"
length = 2.0
step = 0.0538
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/TurnLabel:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(5, -0.25, 0, 0.25, 0, 80, -0.25, 0, 0.25, 0, 80, -0.25, 0, 0.25, 0, 160, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.517541, 0.950874, 1.21754, 1.68421)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/TurnLabel:modulate:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.517541, 0.950874, 1.21754, 1.68421)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xsa6o"]
_data = {
&"RESET": SubResource("Animation_3mlxk"),
&"show_end_screen": SubResource("Animation_yj4cw"),
&"start_player_turn": SubResource("Animation_puse5")
}

[sub_resource type="InputEventKey" id="InputEventKey_fvtbi"]
device = -1
keycode = 75
unicode = 107

[sub_resource type="Shortcut" id="Shortcut_di83f"]
events = [SubResource("InputEventKey_fvtbi")]

[node name="Game" type="Node2D"]
script = ExtResource("1_5lrye")
xp_reward = 50

[node name="Background" type="Node2D" parent="."]
position = Vector2(0, -50)

[node name="Entity_manager" parent="." instance=ExtResource("3_iprcq")]
partyRect = Rect2(100, 150, 450, 300)
foesRect = Rect2(600, 150, 450, 300)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_xsa6o")
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="EndTurnButton" type="Button" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -118.0
offset_top = -51.0
offset_right = 118.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
shortcut = SubResource("Shortcut_di83f")
text = "BATTLE_NEXT_TURN_BUTTON"

[node name="InstructionLabel" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 50.0
offset_right = 20.0
offset_bottom = 73.0
grow_horizontal = 2

[node name="Return" type="Button" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
anchors_preset = -1
anchor_left = 0.01
anchor_top = 0.01
anchor_right = 0.1
anchor_bottom = 0.01
offset_right = -0.416016
offset_bottom = -0.104
text = "LEVEL_SELECT_RETURN_TO_MENU"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -150.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
theme_override_constants/separation = -5

[node name="CharacterInfoPanel" parent="CanvasLayer/HBoxContainer" instance=ExtResource("4_riktp")]
unique_name_in_owner = true
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/HBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/HBoxContainer/PanelContainer"]
clip_contents = true
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/HBoxContainer/PanelContainer/MarginContainer"]
clip_contents = true
layout_mode = 2
alignment = 1

[node name="EndTurnButton" type="Button" parent="CanvasLayer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "BATTLE_NEXT_TURN_BUTTON"
autowrap_mode = 1

[node name="Button2" type="Button" parent="CanvasLayer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "menu"

[node name="TargetInfoPanel" parent="CanvasLayer/HBoxContainer" instance=ExtResource("4_riktp")]
unique_name_in_owner = true
layout_mode = 2

[node name="EndScreen" parent="CanvasLayer" node_paths=PackedStringArray("game_manager") instance=ExtResource("9_s08fr")]
unique_name_in_owner = true
visible = false
offset_left = -128.0
offset_top = 14.0
offset_right = -88.0
offset_bottom = 54.0
game_manager = NodePath("../..")

[node name="TurnLabel" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
offset_left = 543.0
offset_top = 5.0
offset_right = 702.0
offset_bottom = 28.0
text = "BATTLE_YOUR_TURN"
